# pytorch-cpp-layernorm-accelerator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  requirements.txt
cpp/: extension.cpp
docs/: CPU_MPS_RESULTS.md  CUDA_NOTES.md  ELEM_WISE_MULT_NOTES.md  OPT_ARCHITECTURE.md
layernorm-systems/: CMakeLists.txt
layernorm-systems/optimized/: backward.cpp  backward.h  forward.cpp  forward.h
layernorm-systems/python/: TIME_RESULTS.md  autograd.py  drafts.py  main.py  processing.py  runtime.py  tests.py
layernorm-systems/src/: backward.cpp  extension.cpp  forward.cpp
layernorm-systems/tests/backward_pass_autograd/: NOTES.md  backward_pass_layernorm.cpp  backward_pass_layernorm.h  unit_test_layernorm.cpp
layernorm-systems/tests/compile_minimal_extension/: NOTES.md  add_nums_pybind.cpp
layernorm-systems/tests/cpu_and_mps/: PERFORMANCE.md  tensor_cpu_mps.py
layernorm-systems/tests/forward_pass/: forward_pass_layernorm.cpp
layernorm-systems/tests/simple_layernorm_ut/: NOTES.md  builtin_vs_manual_ut.py  layernorm_manual_test.py
layernorm-systems/tests/tensor_memory_cpp/: NOTES.md  forward_pass_layernorm.cpp  forward_pass_layernorm.h  multiply_two_tensors.cpp  unit_test.cpp
optimized/: backward.cpp  backward.cu  backward.h  forward.cpp  forward.cu  forward.h
py/: __init__.py  autograd.py  drafts.py  graphs.py  processing.py  runtime.py
tests/backward_pass_autograd/: backward_pass_layernorm.cpp  unit_test_layernorm.cpp
tests/compile_minimal_extension/: add_nums_pybind.cpp  add_nums_test.py
tests/cpu_and_mps/: tensor_cpu_mps.py
tests/cuda_api/: check_device.cpp
tests/memory_access_opt/: row_vs_cols_access.cpp  welfords_algo.cpp
tests/simple_layernorm_ut/: layernorm_manual_test.py  sample_layernorm_forward.py
tests/tensor_memory_cpp/: multiply_two_tensors.cpp
